[package]
name = "clc-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
axum-extra = "0.10.1"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
tokio = { version = "1.44.1", features = ["full"] }
serde = "1.0.219"
serde_json = "1.0.140"
tower-http = { version = "0.6.2", features = ["cors"] }
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.2"
rustls = "0.23.25"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
